Fixed responsiveness for tablet and below screen sizes and overlapping sections in The Magazine div.

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -113,10 +113,6 @@ body {
   }
 }
 
-.col-right {
-  height: 500px;
-}
-
 .col-right .col-left {
   width: 100%;
   padding-left: 15px;
